--- a/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
+++ b/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
@@ -17,6 +17,7 @@
   <plastik-shared-table
     *ngIf="{ data: images$ | ngrxPush, tableStructure: tableStructure$ | ngrxPush } as obs"
     [data]="obs?.data || []"
+    [caption]="obs?.tableStructure?.caption || ''"
     [columnProperties]="obs.tableStructure?.columnProperties || []"
     [resultsLength]="(count$ | ngrxPush) || 0"
     [pageSizeOptions]="obs.tableStructure?.pageSizeOptions || []"
