--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.scss
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.scss
@@ -19,7 +19,7 @@
 
   .paginator--hide-range-buttons {
     .mat-paginator-range-actions {
-      display: none !important;
+      @apply hidden;
     }
   }
 }
