--- a/libs/nasa-images/faqs/feature/src/lib/nasa-images-faqs-feature/nasa-images-faqs-feature.component.html
+++ b/libs/nasa-images/faqs/feature/src/lib/nasa-images-faqs-feature/nasa-images-faqs-feature.component.html
@@ -5,7 +5,7 @@
 <section>
   <div class="mx-xl my-md">
     <mat-accordion>
-      <mat-expansion-panel *ngFor="let faq of faqs$ | ngrxPush">
+      <mat-expansion-panel *ngFor="let faq of faqs$ | ngrxPush; trackBy: trackFaqs">
         <mat-expansion-panel-header class="h-xxl">
           <mat-panel-title>
             <h3 class="text-primary">{{ faq.question }}</h3>
