--- a/apps/nasa-images/src/styles/loading.scss
+++ b/apps/nasa-images/src/styles/loading.scss
@@ -8,15 +8,16 @@ body {
   .logo {
     @apply my-0 mx-auto w-[100px] saturate-100 contrast-100 brightness-95;
   }
-}
 
-.lds-ripple {
-  @apply relative inline-block w-[80px] h-[80px];
-  div {
-    @apply absolute border-white border-4 opacity-100 rounded-full animate-radar;
+  .lds-ripple {
+    @apply relative inline-block w-[80px] h-[80px] motion-reduce:before:content-['loading...'];
 
-    &:nth-child(2) {
-      animation-delay: -0.5s;
+    > div {
+      @apply absolute border-white border-4 opacity-100 rounded-full animate-radar motion-reduce:animate-none motion-reduce:hidden;
+
+      &:nth-child(2) {
+        animation-delay: -0.5s;
+      }
     }
   }
 }
