--- a/libs/core/cms-layout/ui/sidenav/src/lib/core-cms-layout-ui-sidenav/core-cms-layout-ui-sidenav.component.html
+++ b/libs/core/cms-layout/ui/sidenav/src/lib/core-cms-layout-ui-sidenav/core-cms-layout-ui-sidenav.component.html
@@ -14,7 +14,7 @@
     <ng-content select="[footer]"></ng-content>
   </mat-sidenav>
 
-  <mat-sidenav-content role="main" tabindex="-1" class="scroll-smooth" id="mainContent" class="bg-white p-md h-[calc(100vh-129px)]">
+  <mat-sidenav-content role="main" tabindex="-1" id="mainContent" class="bg-white p-md h-[calc(100vh-129px)] motion-safe:scroll-smooth">
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
