--- a/libs/shared/activity/ui/src/lib/shared-activity-ui-linear/shared-activity-ui-linear.component.html
+++ b/libs/shared/activity/ui/src/lib/shared-activity-ui-linear/shared-activity-ui-linear.component.html
@@ -1,3 +1,3 @@
-<div class="h-tiny activity-ui-linear__container">
-  <mat-progress-bar *ngIf="active" [mode]="mode"></mat-progress-bar>
+<div class="h-tiny activity-ui-linear__container motion-reduce:hidden">
+  <mat-progress-bar aria-label="loading..." *ngIf="active" [mode]="mode"></mat-progress-bar>
 </div>
