--- a/libs/shared/form/feature/src/lib/shared-form-feature.component.html
+++ b/libs/shared/form/feature/src/lib/shared-form-feature.component.html
@@ -2,19 +2,19 @@
   <!-- form -->
 
   <formly-form
-    (modelChange)="onModelChange($event)"
     class="form-container"
     [form]="form"
     [options]="options"
     [fields]="fields"
     [model]="model"
+    (modelChange)="onModelChange($event)"
   ></formly-form>
 
   <!-- buttons -->
   <div class="mt-6 max-height-flex">
     <div *ngIf="submitAvailable" class="form-actions">
       <div>
-        <button [ngClass]="['main-button', 'mat-accent', 'mat-flat-button']" color="accent" type="submit" [disabled]="!form.valid">
+        <button color="accent" type="submit" [ngClass]="['main-button', 'mat-accent', 'mat-flat-button']" [disabled]="!form.valid">
           Submit
         </button>
       </div>
