fix(nasa-images): #201 set routerLinkActive for menu items work
ISSUES CLOSED: #201

--- a/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
+++ b/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
@@ -46,6 +46,7 @@
         routerLinkActive="bg-gray-5"
         ariaCurrentWhenActive="page"
         [routerLink]="item?.route"
+        [routerLinkActiveOptions]="{ exact: item?.routerLinkActiveOptionsExact || false }"
       >
         <div class="flex content-center justify-start gap-sm">
           <mat-icon> {{ item.icon }} </mat-icon>
