feat(shared/form/ui): #178 add a year picker formly controller
use it in nasa-images search

ISSUES CLOSED: #178

--- a/apps/nasa-images/src/styles/styles.scss
+++ b/apps/nasa-images/src/styles/styles.scss
@@ -149,3 +149,9 @@ $nasa-images-theme: mat.define-light-theme(
     }
   }
 }
+
+// mat input
+
+.mat-datepicker-toggle {
+  @apply flex justify-center items-center -mr-sm;
+}
