--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
@@ -42,5 +42,6 @@
 
   <ng-template #noResults>
     <ng-content select="[noResults]"></ng-content>
+    <ng-content select="[noValidSearch]"></ng-content>
   </ng-template>
 </div>
