--- a/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
+++ b/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
@@ -24,18 +24,18 @@
     [paginationVisibility]="obs.tableStructure?.paginationVisibility"
     (changePagination)="onChangePagination($event)"
   >
-    <plastik-nasa-images-search-ui-no-results *ngIf="isActiveSearch$ | ngrxPush; else noValidSearch" noResults>
+    <plastik-nasa-images-search-ui-no-results *ngIf="isActiveSearch$ | ngrxPush" noResults>
       <span icon> search_off </span>
       <span title>No results found</span>
       <span message>We can't find any item matching your search.</span>
     </plastik-nasa-images-search-ui-no-results>
 
-    <ng-template #noValidSearch>
-      <plastik-nasa-images-search-ui-no-results noResults>
-        <span icon> search_on </span>
-        <span title>NASA images search</span>
-        <span message>Use the filter to find related NASA pictures.<br />You must provide a valid matching string.</span>
-      </plastik-nasa-images-search-ui-no-results>
-    </ng-template>
+    <plastik-nasa-images-search-ui-no-results *ngIf="!(isActiveSearch$ | ngrxPush)" noValidSearch>
+      <span icon> search_on </span>
+      <span title>NASA images search</span>
+      <span message>Use the filter to find related NASA pictures.<br />You must provide a valid matching string.</span>
+    </plastik-nasa-images-search-ui-no-results>
+
+    <ng-template #noValidSearch> </ng-template>
   </plastik-shared-table>
 </section>
