--- a/libs/nasa-images/faqs/feature/src/lib/nasa-images-faqs-feature/nasa-images-faqs-feature.component.scss
+++ b/libs/nasa-images/faqs/feature/src/lib/nasa-images-faqs-feature/nasa-images-faqs-feature.component.scss
@@ -4,6 +4,9 @@
   }
   .mat-content {
     @apply block lg:flex;
+    .mat-expansion-panel-header-title {
+      @apply lg:flex-grow-[3];
+    }
     h3 {
       @apply text-base md:text-md;
     }
