test(e2e): #248 add nasa-images app layout e2e
add CI for e2e with github actions

ISSUES CLOSED: #248

--- a/libs/core/cms-layout/ui/sidenav/src/lib/core-cms-layout-ui-sidenav/core-cms-layout-ui-sidenav.component.html
+++ b/libs/core/cms-layout/ui/sidenav/src/lib/core-cms-layout-ui-sidenav/core-cms-layout-ui-sidenav.component.html
@@ -1,6 +1,7 @@
 <mat-sidenav-container (backdropClick)="onToggleSidenav(false)">
   <mat-sidenav
     class="p-md"
+    data-test="sidenav"
     [mode]="mode"
     [fixedInViewport]="fixedInViewport"
     [position]="position"
