--- a/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
+++ b/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="notificationConfig$ | ngrxPush as config" [plastikSnackbar]="config" (sendDismiss)="onNotificationDismiss()"></div>
 
 <div class="flex flex-col h-max">
-  <plastik-core-cms-layout-ui-header>
+  <plastik-core-cms-layout-ui-header data-test="layout-header">
     <div start class="flex items-center gap-sm">
       <ng-container *ngIf="sidenavPosition === 'start'" [ngTemplateOutlet]="toggleSidenavButton"></ng-container>
-      <h1>
+      <h1 data-test="layout-title">
         <span class="sr-only">{{ headerConfig.title }}</span>
         <a class="flex items-center content-center justify-between text-white hover:no-underline" href="">
           <svg-icon *ngIf="headerConfig.mainIcon as icon" [src]="icon.iconPath" [svgClass]="icon.svgClass"></svg-icon>
@@ -39,7 +39,7 @@
     [sidenavOpened]="(sidenavOpened$ | ngrxPush) || false"
     (toggleSidenav)="onToggleSidenav()"
   >
-    <mat-nav-list menu-items>
+    <mat-nav-list menu-items data-test="sidenav-list">
       <a
         *ngFor="let item of sidenavConfig; trackBy: trackSidenavItems"
         mat-list-item
@@ -56,7 +56,7 @@
     </mat-nav-list>
   </plastik-core-cms-layout-ui-sidenav>
 
-  <plastik-core-cms-layout-ui-footer>
+  <plastik-core-cms-layout-ui-footer data-test="layout-footer">
     <div content class="flex items-center justify-center gap-sm">
       <svg-icon svgClass="fill-white w-xl h-xl" src="/assets/svg/plastikaweb.svg"></svg-icon>
       <div class="flex flex-row gap-[4px]">
@@ -77,7 +77,13 @@
 </div>
 
 <ng-template #toggleSidenavButton>
-  <button mat-icon-button aria-label="sidenav toggle button" class="flex justify-center align-middle" (click)="onToggleSidenav()">
+  <button
+    mat-icon-button
+    aria-label="sidenav toggle button"
+    class="flex justify-center align-middle"
+    data-test="toggle-sidenav-button"
+    (click)="onToggleSidenav()"
+  >
     <mat-icon *ngIf="!(sidenavOpened$ | ngrxPush); else closeButton" class="mat-18">menu</mat-icon>
 
     <ng-template #closeButton>
