--- a/libs/nasa-images/faqs/feature/src/lib/nasa-images-faqs-feature/nasa-images-faqs-feature.component.html
+++ b/libs/nasa-images/faqs/feature/src/lib/nasa-images-faqs-feature/nasa-images-faqs-feature.component.html
@@ -1,18 +1,18 @@
-<h2 *ngIf="routeInfo$ | ngrxPush as info" class="flex items-center gap-sm">
+<h2 *ngIf="routeInfo$ | ngrxPush as info" class="flex items-center gap-sm" data-test="page-title">
   <mat-icon> {{ info.icon }} </mat-icon> <span>{{ info.title }}</span>
 </h2>
 
 <section>
   <div class="mx-xl my-md">
     <mat-accordion>
-      <mat-expansion-panel *ngFor="let faq of faqs$ | ngrxPush; trackBy: trackFaqs">
+      <mat-expansion-panel *ngFor="let faq of faqs$ | ngrxPush; trackBy: trackFaqs" data-test="faq-item">
         <mat-expansion-panel-header class="h-xxl">
           <mat-panel-title>
-            <h3 class="text-primary">{{ faq.question }}</h3>
+            <h3 class="text-primary" data-test="faq-question">{{ faq.question }}</h3>
           </mat-panel-title>
           <mat-panel-description></mat-panel-description>
         </mat-expansion-panel-header>
-        <div [innerHTML]="faq.answer"></div>
+        <div data-test="faq-answer" [innerHTML]="faq.answer"></div>
       </mat-expansion-panel>
     </mat-accordion>
   </div>
