test(e2e): #189 add cypress testing for nasa-images /search page
ISSUES CLOSED: #189

--- a/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
+++ b/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
@@ -1,4 +1,4 @@
-<h2 *ngIf="routeInfo$ | ngrxPush as info" class="flex items-center gap-sm">
+<h2 *ngIf="routeInfo$ | ngrxPush as info" class="flex items-center gap-sm" data-test="page-title">
   <mat-icon> {{ info?.icon }} </mat-icon> <span>{{ info?.title }}</span>
 </h2>
 
