--- a/libs/nasa-images/search/ui/no-results/src/lib/nasa-images-search-ui-no-results/nasa-images-search-ui-no-results.component.html
+++ b/libs/nasa-images/search/ui/no-results/src/lib/nasa-images-search-ui-no-results/nasa-images-search-ui-no-results.component.html
@@ -5,7 +5,7 @@
     </mat-icon>
     <ng-content select="[title]"></ng-content>
   </h3>
-  <div class="mt-md">
+  <div class="mt-md" data-test="search-no-results-message">
     <ng-content select="[message]"></ng-content>
   </div>
 </div>
