feat(shared/dynamic-bg-color): #252 add a highlight directive on hover to shared/util
ISSUES CLOSED: #252

--- a/apps/experimental/src/app/app.component.html
+++ b/apps/experimental/src/app/app.component.html
@@ -1,1 +1,2 @@
-<exp-nx-welcome></exp-nx-welcome> <router-outlet></router-outlet>
+<h1 plastikDynamicBgColor color="orange">{{ title }}</h1>
+<router-outlet></router-outlet>
