--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
@@ -11,11 +11,7 @@
         </mat-header-cell>
 
         <mat-cell *matCellDef="let row; let i = index" [ngClass]="column.cssClasses?.[0] || ''">
-          <div
-            class="table-cell table__cell--default"
-            [ngClass]="column.cssClasses?.[1] || ''"
-            [innerHTML]="row | safeFormatted : column : i + 1 : pagination"
-          ></div>
+          <div [ngClass]="column.cssClasses?.[1] || ''" [innerHTML]="row | safeFormatted: column : i + 1 : pagination"></div>
         </mat-cell>
       </ng-container>
 
